--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,6 +8,7 @@ python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 python-multipart==0.0.6
 pydantic[email]==2.5.0
+pydantic-settings==2.1.0
 alembic==1.12.1
 rq==1.15.1
 rq-scheduler==0.11.0
